--- a/notebooks/web_scraping_data.ipynb
+++ b/notebooks/web_scraping_data.ipynb
@@ -16,12 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from utils.file_utils import create_folder_if_not_exists\n",
+    "from utils.file_utils import remove_files_in_folder"
    ]
   },
   {
@@ -33,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "langs = ['fr', 'en', 'es', 'de', 'it']\n",
     "base_url = 'wikipedia.org/wiki'\n",
     "\n",
-    "def get_wiki_page(lang, page):\n",
+    "def get_wiki_page(lang : str, page : str):\n",
     "    url = f'https://{lang}.{base_url}/' + page\n",
     "    response = requests.get(url)\n",
     "    if response.status_code == 200:\n",
@@ -48,8 +53,7 @@
     "    else:\n",
     "        return None\n",
     "    \n",
-    "def get_wiki_links(lang, page):\n",
-    "    html = get_wiki_page(lang, page)\n",
+    "def get_wiki_pages_links_from_html(html : str):\n",
     "    if html:\n",
     "        soup = BeautifulSoup(html, 'html.parser')\n",
     "        links = soup.select('a[href*=\"/wiki/\"]')\n",
@@ -57,8 +61,11 @@
     "    else:\n",
     "        return None\n",
     "    \n",
-    "def get_wiki_page_title(lang, page):\n",
+    "def get_wiki_pages_links(lang : str, page : str):\n",
     "    html = get_wiki_page(lang, page)\n",
+    "    return get_wiki_pages_links_from_html(html)\n",
+    "\n",
+    "def get_wiki_page_title_from_html(html : str):\n",
     "    if html:\n",
     "        soup = BeautifulSoup(html, 'html.parser')\n",
     "        title = soup.select('h1#firstHeading')[0].text\n",
@@ -66,14 +73,21 @@
     "    else:\n",
     "        return None\n",
     "    \n",
-    "def get_wiki_page_content(lang, page):\n",
+    "def get_wiki_page_title(lang : str, page : str):\n",
     "    html = get_wiki_page(lang, page)\n",
+    "    return get_wiki_page_title_from_html(html)\n",
+    "    \n",
+    "def get_wiki_page_content_from_html(html : str):\n",
     "    if html:\n",
     "        soup = BeautifulSoup(html, 'html.parser')\n",
     "        content = soup.select('div#mw-content-text')[0].text\n",
     "        return content\n",
     "    else:\n",
     "        return None\n",
+    "    \n",
+    "def get_wiki_page_content(lang : str, page : str):\n",
+    "    html = get_wiki_page(lang, page)\n",
+    "    return get_wiki_page_content_from_html(html)\n",
     "\n",
     "page = ''\n",
     "lang = 'fr'\n",
@@ -83,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,18 +106,23 @@
        "True"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "saving_path = '../data/test/'\n",
+    "saving_path = '../data/train/'\n",
     "\n",
-    "def save_wiki_page_content(lang, page):\n",
-    "    content = get_wiki_page_content(lang, page)\n",
+    "def save_wiki_page_content(lang : str, page : str):\n",
+    "    wiki_page = get_wiki_page(lang, page)\n",
+    "    content = get_wiki_page_content_from_html(wiki_page)\n",
     "    if content:\n",
-    "        with open(f'{saving_path}/{lang}/{get_wiki_page_title(lang,page)}.txt', 'w') as f:\n",
+    "        title = get_wiki_page_title_from_html(wiki_page)\n",
+    "        \n",
+    "        create_folder_if_not_exists(f'{saving_path}/{lang}')\n",
+    "        \n",
+    "        with open(f'{saving_path}/{lang}/{title}.txt', 'w') as f:\n",
     "            f.write(content)\n",
     "        return True\n",
     "    else:\n",
@@ -112,6 +131,44 @@
     "page = ''\n",
     "lang = 'fr'\n",
     "save_wiki_page_content(lang, page)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "page = ''\n",
+    "max_depth = 1\n",
+    "\n",
+    "def save_wiki_pages_content_recursively(lang : str, page : str, depth : int):\n",
+    "    if depth > max_depth:\n",
+    "        return\n",
+    "    else:\n",
+    "        links = get_wiki_pages_links(lang, page)\n",
+    "        for link in links:\n",
+    "            link = link['href']\n",
+    "            if link.startswith('/wiki/'):\n",
+    "                link = link[6:]\n",
+    "                if ':' not in link:\n",
+    "                    save_wiki_page_content(lang, link)\n",
+    "                    save_wiki_pages_content_recursively(lang, link, depth + 1)\n",
+    "          \n",
+    "#remove_files_in_folder(f'{saving_path}/fr')       \n",
+    "for lang in langs:\n",
+    "    save_wiki_pages_content_recursively(lang, page, 0)"
    ]
   }
  ],
