--- a/notebooks/web_scraping_data.ipynb
+++ b/notebooks/web_scraping_data.ipynb
@@ -26,7 +26,8 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "from utils.file_utils import create_folder_if_not_exists\n",
-    "from utils.file_utils import remove_files_in_folder"
+    "from utils.file_utils import remove_files_in_folder\n",
+    "from utils.file_utils import file_exists"
    ]
   },
   {
@@ -122,6 +123,9 @@
     "        \n",
     "        create_folder_if_not_exists(f'{saving_path}/{lang}')\n",
     "        \n",
+    "        if file_exists(f'{saving_path}/{lang}/{title}.txt'):\n",
+    "            return False\n",
+    "        \n",
     "        with open(f'{saving_path}/{lang}/{title}.txt', 'w') as f:\n",
     "            f.write(content)\n",
     "        return True\n",
@@ -135,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +148,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
