--- a/notebooks/web_scraping_data.ipynb
+++ b/notebooks/web_scraping_data.ipynb
@@ -10507,7 +10507,8 @@
     "            # print(f'Error while saving {lang}')\n",
     "            \n",
     "    else:\n",
-    "        print(f'{lang} already has {max_files_per_lang} files')\n",
+    "        pass\n",
+    "        #print(f'{lang} already has {max_files_per_lang} files')\n",
     "          \n",
     "clear_all_folders()\n",
     "for lang in langs:\n",
