--- a/notebooks/web_scraping_data.ipynb
+++ b/notebooks/web_scraping_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,7 @@
     "\n",
     "import sys\n",
     "sys.path.append('..')\n",
-    "from utils.file_utils import create_folder_if_not_exists\n",
-    "from utils.file_utils import remove_files_in_folder\n",
-    "from utils.file_utils import file_exists"
+    "from utils.file_utils import create_folder_if_not_exists, save_text_data, remove_files_in_folder, file_exists"
    ]
   },
   {
@@ -39,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +105,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,13 +125,7 @@
     "            #print(f'{title}.txt already exists')\n",
     "            return False\n",
     "        \n",
-    "        try:\n",
-    "            with open(f'{saving_path}/{lang}/{title}.txt', 'w') as f:\n",
-    "                f.write(content)\n",
-    "        except:\n",
-    "            print(f'Error while saving {title}.txt')\n",
-    "            return False\n",
-    "        return True\n",
+    "        return save_text_data(content, f'{saving_path}/{lang}/{title}.txt')\n",
     "    else:\n",
     "        print(f'Error while getting {title}.txt')\n",
     "        return False\n",
@@ -146,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -190,13 +182,13 @@
       "5 files saved for de\n",
       "6 files saved for de\n",
       "7 files saved for de\n",
-      "Error while saving Hilfe:Menüpunkte/Desktop.txt\n",
-      "Error while saving Hilfe:Menüpunkte/Mobil.txt\n",
+      "[Errno 2] No such file or directory: '../data/raw//de/Hilfe:Menüpunkte/Desktop.txt'\n",
+      "[Errno 2] No such file or directory: '../data/raw//de/Hilfe:Menüpunkte/Mobil.txt'\n",
       "8 files saved for de\n",
-      "Error while saving Hilfe:Suche/Cirrus.txt\n",
-      "Error while saving Hilfe:Suche/Formular.txt\n",
-      "Error while saving Hilfe:Suche/insource.txt\n",
-      "Error while saving Hilfe:Suche/Dateien.txt\n",
+      "[Errno 2] No such file or directory: '../data/raw//de/Hilfe:Suche/Cirrus.txt'\n",
+      "[Errno 2] No such file or directory: '../data/raw//de/Hilfe:Suche/Formular.txt'\n",
+      "[Errno 2] No such file or directory: '../data/raw//de/Hilfe:Suche/insource.txt'\n",
+      "[Errno 2] No such file or directory: '../data/raw//de/Hilfe:Suche/Dateien.txt'\n",
       "9 files saved for de\n",
       "10 files saved for de\n",
       "1 files saved for it\n",
