--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -35,9 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished processing it\n",
+      "Finished processing de\n",
+      "Finished processing fr\n",
+      "Finished processing es\n",
+      "Finished processing en\n"
+     ]
+    }
+   ],
    "source": [
     "path_raw_data = '../data/raw/'\n",
     "path_train_data = '../data/train/'\n",
@@ -49,11 +61,28 @@
     "    for line in lines:\n",
     "        if is_empty_line(line):\n",
     "            continue\n",
+    "        if is_too_short(line):\n",
+    "            continue\n",
     "        with open(path_train_data_lang + file_name, 'a') as f:\n",
-    "            f.write(line + '\\n')\n",
-    "            \n",
+    "            f.write(line)\n",
+    "\n",
+    "def has_no_letters(line):\n",
+    "    return not any(c.isalpha() for c in line)\n",
+    "\n",
+    "def has_no_digits(line):\n",
+    "    return not any(c.isdigit() for c in line)\n",
+    "\n",
+    "def has_no_punctuation(line):\n",
+    "    return not any(c in '.,;:?!' for c in line)\n",
+    "\n",
+    "def has_no_special_char(line):\n",
+    "    return not any(c in '()[]{}<>@#$%^&*_-=+|\\/~`' for c in line)\n",
+    "\n",
     "def is_empty_line(line):\n",
     "    return line == '\\n'\n",
+    "\n",
+    "def is_too_short(line):\n",
+    "    return len(line) < 5\n",
     "            \n",
     "def file_content(path):\n",
     "    return load_text_data(path)\n",
@@ -62,8 +91,7 @@
     "    create_folder_if_not_exists(path_train_data + lang_file)\n",
     "    remove_files_in_folder(path_train_data + lang_file)\n",
     "    merge_files(path_raw_data + lang_file + '/', path_train_data + lang_file + '/', lang_file + '.txt')\n",
-    "    \n",
-    "    \n",
+    "    print('Finished processing ' + lang_file)\n",
     "\n"
    ]
   }
