--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -16,14 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
     "from utils.file_utils import get_files_in_folder, create_folder_if_not_exists, remove_files_in_folder\n",
-    "from utils.data_loader import load_text_data"
+    "from utils.data_loader import load_text_data\n",
+    "from utils.text_preprocessing import *"
    ]
   },
   {
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,24 +66,6 @@
     "            continue\n",
     "        with open(path_train_data_lang + file_name, 'a') as f:\n",
     "            f.write(line)\n",
-    "\n",
-    "def has_no_letters(line):\n",
-    "    return not any(c.isalpha() for c in line)\n",
-    "\n",
-    "def has_no_digits(line):\n",
-    "    return not any(c.isdigit() for c in line)\n",
-    "\n",
-    "def has_no_punctuation(line):\n",
-    "    return not any(c in '.,;:?!' for c in line)\n",
-    "\n",
-    "def has_no_special_char(line):\n",
-    "    return not any(c in '()[]{}<>@#$%^&*_-=+|\\/~`' for c in line)\n",
-    "\n",
-    "def is_empty_line(line):\n",
-    "    return line == '\\n'\n",
-    "\n",
-    "def is_too_short(line):\n",
-    "    return len(line) < 5\n",
     "            \n",
     "def file_content(path):\n",
     "    return load_text_data(path)\n",
