--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -62,7 +62,7 @@
     "    for line in lines:\n",
     "        if is_empty_line(line):\n",
     "            continue\n",
-    "        if is_too_short(line):\n",
+    "        if is_too_short(line, 5):\n",
     "            continue\n",
     "        with open(path_train_data_lang + file_name, 'a') as f:\n",
     "            f.write(line)\n",
