--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60,9 +60,19 @@
     "  for file in files:\n",
     "    lines = load_text_data(path_raw_data_lang + file)\n",
     "    for line in lines:\n",
+    "        line = clean_line(line)\n",
+    "        \n",
     "        if is_empty_line(line):\n",
     "            continue\n",
     "        if is_too_short(line, 5):\n",
+    "            continue\n",
+    "        if has_not_enough_words(line, 6):\n",
+    "            continue\n",
+    "        if has_a_link(line):\n",
+    "            continue\n",
+    "        if contains_one_of(line, ['wiki', 'Wiki']):\n",
+    "            continue\n",
+    "        if contains_curly_brackets(line):\n",
     "            continue\n",
     "        with open(path_train_data_lang + file_name, 'a') as f:\n",
     "            f.write(line)\n",
