--- a/notebooks/web_scraping_data.ipynb
+++ b/notebooks/web_scraping_data.ipynb
@@ -124,6 +124,9 @@
     "        if file_exists(f'{saving_path}/{lang}/{title}.txt'):\n",
     "            #print(f'{title}.txt already exists')\n",
     "            return False\n",
+    "        if len(content) < 100:\n",
+    "            #print(f'{title}.txt is too short')\n",
+    "            return False\n",
     "        \n",
     "        return save_text_data(content, f'{saving_path}/{lang}/{title}.txt')\n",
     "    else:\n",
