--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -74,8 +74,12 @@
     "            continue\n",
     "        if contains_curly_brackets(line):\n",
     "            continue\n",
-    "        with open(path_train_data_lang + file_name, 'a') as f:\n",
-    "            f.write(line)\n",
+    "        try :\n",
+    "            with open(path_train_data_lang + file_name, 'a') as f:\n",
+    "                f.write(line)\n",
+    "        except:\n",
+    "            print('Error writing file ' + path_train_data_lang + file_name)\n",
+    "            continue\n",
     "            \n",
     "def file_content(path):\n",
     "    return load_text_data(path)\n",
