--- a/notebooks/web_scraping_data.ipynb
+++ b/notebooks/web_scraping_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "\n",
     "import sys\n",
     "sys.path.append('..')\n",
-    "from utils.file_utils import create_folder_if_not_exists, save_text_data, remove_files_in_folder, file_exists"
+    "from utils.file_utils import create_folder_if_not_exists, save_text_data, remove_files_in_folder, file_exists, num_of_files_in_folder"
    ]
   },
   {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5218,6 +5218,30 @@
     "\n",
     "sys.setrecursionlimit(max_files_per_lang) #  becareful with this\n",
     "save_wiki_pages_content(\"en\", \"zumbo\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Number of pages scraped:  10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1475\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num_of_files_in_folder(f'{saving_path}/en'))"
    ]
   }
  ],
